Fixed modal overflow bug

--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -14,7 +14,8 @@
 
 @media (min-width: 600px) {
     .Modal {
-        width: 500px;
-        left: calc(50% - 250px);
+        max-height: calc(700vh - 100px);
+        width: 800px;
+        left: calc(50% - 400px);
     }
 }
