--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,6 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
 }
+html {
+  overflow-y: scroll;
+}
